<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.ismealdi.meepopup.schema.Place" />

        <variable
            name="place"
            type="Place" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutParent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackgroundPrimary"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <include
            android:id="@+id/componentToolbar"
            layout="@layout/component_toolbar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrolling"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/componentToolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin_big">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layoutTopInfo"
                    style="@style/AppTheme.Layout.Parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorBackgroundSecondary"
                    android:orientation="vertical"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.ismealdi.meepopup.util.component.AmTextView
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{place.nameCapitalize()}"
                        android:visibility="gone"
                        app:am_font_style="medium" />

                    <com.ismealdi.meepopup.util.component.AmTextView
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@id/buttonPoling"
                        android:layout_marginEnd="@dimen/component_medium"
                        android:id="@+id/labelPlaceName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:lines="1"
                        android:text="@{place.nameCapitalize()}"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="@dimen/text_medium"
                        app:am_font_style="medium" />

                    <com.ismealdi.meepopup.util.component.AmTextView
                        app:layout_constraintTop_toBottomOf="@id/labelPlaceName"
                        app:layout_constraintLeft_toLeftOf="@id/labelPlaceName"
                        app:layout_constraintRight_toLeftOf="@id/buttonPoling"
                        android:layout_marginEnd="@dimen/component_medium"
                        android:id="@+id/labelPlaceAddress"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/component_small"
                        android:ellipsize="end"
                        android:lines="1"
                        android:text="@{place.address}"
                        android:textColor="@color/colorTextSecondary"
                        android:textSize="@dimen/text_small"
                        app:am_font_style="medium" />


                    <com.ismealdi.meepopup.util.component.AmTextView
                        android:id="@+id/buttonPoling"
                        app:am_font_style="bold"
                        app:layout_constraintTop_toTopOf="@id/labelPlaceName"
                        app:layout_constraintBottom_toBottomOf="@id/labelPlaceAddress"
                        app:layout_constraintRight_toRightOf="parent"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:background="@drawable/button_accent_round"
                        android:padding="@dimen/component_medium"
                        android:textSize="@dimen/text_extra_tiny"
                        android:textColor="@color/colorTextLight"
                        android:text="@string/text_poling"/>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/layoutPollingDate"
                        app:layout_constraintTop_toBottomOf="@id/labelPlaceAddress"
                        style="@style/AppTheme.Layout.Parent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/component_extra_big"
                        android:background="@drawable/input_primary">

                        <com.ismealdi.meepopup.util.component.AmTextView
                            android:id="@+id/labelTitleOrder"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_polling_pada"
                            android:textColor="@color/colorTextPrimary"
                            android:textSize="@dimen/text_small"
                            app:am_font_style="medium"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <com.ismealdi.meepopup.util.component.AmTextView
                            android:id="@+id/labelSubTitleOrder"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/component_tiny"
                            android:text="01 Oktober 2019"
                            android:textColor="@color/colorTextSecondary"
                            android:textSize="@dimen/text_tiny"
                            app:layout_constraintLeft_toLeftOf="@id/labelTitleOrder"
                            app:layout_constraintTop_toBottomOf="@id/labelTitleOrder" />

                        <com.ismealdi.meepopup.util.component.AmTextView
                            android:id="@+id/textRate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/component_small"
                            android:text="20/100"
                            android:textColor="@color/colorTextAccent"
                            android:textSize="@dimen/text_small"
                            app:am_font_style="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layoutPemilih"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:paddingTop="@dimen/component_small"
                    android:background="@color/colorBackgroundSecondary"
                    app:layout_constraintTop_toBottomOf="@id/layoutTopInfo"
                    app:layout_constraintLeft_toLeftOf="parent">
                    <com.ismealdi.meepopup.util.component.AmTextView
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:id="@+id/labelPemilih"
                        app:am_font_style="medium"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:textSize="@dimen/text_normal"
                        android:textColor="@color/colorTextPrimary"
                        android:text="@string/text_pemilih"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/listChooser"
                        android:paddingStart="@dimen/activity_horizontal_margin"
                        android:paddingEnd="@dimen/activity_horizontal_margin_small"
                        android:layout_marginTop="@dimen/component_big"
                        app:layout_constraintTop_toBottomOf="@id/labelPemilih"
                        android:splitMotionEvents="false"
                        android:overScrollMode="never"
                        android:clipToPadding="false"
                        tools:listitem="@layout/item_chooser"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/image_size"/>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.ismealdi.meepopup.util.component.AmTextView
                    app:layout_constraintTop_toBottomOf="@id/layoutPemilih"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:id="@+id/labelUlasan"
                    app:am_font_style="medium"
                    android:textSize="@dimen/text_normal"
                    android:textColor="@color/colorTextPrimary"
                    android:text="@string/text_ulasan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <com.ismealdi.meepopup.util.component.AmTextView
                    app:layout_constraintTop_toTopOf="@id/labelUlasan"
                    app:layout_constraintBottom_toBottomOf="@id/labelUlasan"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:clickable="true"
                    android:focusable="true"
                    android:id="@+id/buttonTambahUlasan"
                    app:am_font_style="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textSize="@dimen/text_small"
                    android:textColor="@drawable/button_text_primary"
                    android:text="@string/text_plus_ulasan"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/listReviews"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/component_big"
                    app:layout_constraintTop_toBottomOf="@id/labelUlasan"
                    android:splitMotionEvents="false"
                    android:overScrollMode="never"
                    android:clipToPadding="false"
                    tools:listitem="@layout/item_review"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>